# svada

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: pre-commit  requirements-test.txt
src/svd/: __init__.py  __main__.py  _bindings.py  _device.py  bindings.py  device.py  errors.py  memory_block.py  parsing.py  path.py  peripheral.py  profiling.py  util.py
