[project]
name = "svada"
dynamic = ["version"]
authors = [{ name = "Nordic Semiconductor ASA" }]
description = "SVD parsing for Python."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
  "setuptools_scm[toml]>=6.2",
  "lxml~=5.3",
  "numpy~=2.1",
  "typing_extensions>=4.4.0",
]

[project.urls]
homepage = "https://github.com/nordicsemiconductor/svada"
repository = "https://github.com/nordicsemiconductor/svada.git"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { svd = "src/svd" }
include-package-data = true

[tool.setuptools.package-data]
svd = ["py.typed"]

[tool.setuptools_scm]

[tool.mypy]
disallow_untyped_defs = true
