[project]
name = "svada"
dynamic = ["version"]
authors = [{ name = "Nordic Semiconductor ASA" }]
description = "SVD parsing for Python."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
  "lxml~=5.3",
  "numpy~=2.1",
  "typing_extensions>=4.4.0",
]
optional-dependencies = { cli = ["intelhex", "tomlkit"] }

[project.scripts]
svada = "svd.__main__:cli"

[project.urls]
homepage = "https://github.com/nordicsemiconductor/svada"
repository = "https://github.com/nordicsemiconductor/svada.git"

[build-system]
requires = ["hatchling<1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["src/svd"]

[tool.hatch.build.targets.wheel]
packages = [
  # Used when building the wheel from the sdist
  "svd",
  # Used when building the wheel directly
  "src/svd"
]

[tool.mypy]
disallow_untyped_defs = true
