[metadata]
name = svada
version = attr: svd.__version__
author = Nordic Semiconductor ASA
description = "SVD parsing for Python."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nordicsemiconductor/svada
license = Apache Software License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = VERSION
